--- a/src/styles/Resume.css
+++ b/src/styles/Resume.css
@@ -10,4 +10,12 @@
     font-size: 2.3rem;
     padding: 5px 50px;
     float: right;
+    margin-bottom: 30px;
+    background: lightgrey;
+    border-radius: 100px;
+    outline: none;
+}
+
+.resume button:hover {
+    background: #957397;
 }
