--- a/src/styles/Resume.css
+++ b/src/styles/Resume.css
@@ -5,17 +5,21 @@
 }
 
 .resume button {
-    border: 2px solid black;
+    border: 1px solid black;
     font-family: "Changa" ;
     font-size: 2.3rem;
     padding: 5px 50px;
     float: right;
     margin-bottom: 30px;
     background: lightgrey;
-    border-radius: 100px;
     outline: none;
+    transition: .5s;
 }
 
 .resume button:hover {
     background: #957397;
+    color: white;
+    border: 1.8px solid black;
+    transition: .5s;
+    font-size: 2.5rem;
 }
