--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,10 +1,23 @@
+.projects-page {
+    margin-top: 60px;
+    height: 100vh;
+}
+
+@media (max-width: 1380px) {
+    .projects-page {
+        height: 100%;
+    }
+}
+
 .project-cards {
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .project-cards div {
     margin: 0 auto;
+    margin-top: 15px;
 
 }
 
@@ -17,6 +30,10 @@
 
     .project-cards div {
         margin-bottom: 20px;
+    }
+
+    .projects-page {
+        height: 100%;
     }
 }
 
