--- a/src/styles/Resume.css
+++ b/src/styles/Resume.css
@@ -19,7 +19,7 @@
     padding: 5px 50px;
     float: right;
     margin-bottom: 40px;
-    background: lightgrey;
+    background: grey;
     outline: none;
     transition: .5s;
     margin-right: 70px;
@@ -28,4 +28,22 @@
 
 .resume button:hover {
     background: #B55267;
+}
+
+@media (max-width: 500px) {
+    .resume__container {
+        margin-top: 60px;
+        width: 300px;
+       
+    }
+
+    .resume button {
+        margin: 0 auto;
+        margin-top: 20px;
+        margin-bottom: 30px;
+        width: 300px;
+    }
+    .pdf {
+        display: none;
+    }
 }
